--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,18 +10,16 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - os: ubuntu-latest
-          rev: v0.8.3
-        - os: ubuntu-latest
-          rev: v0.9.5
-        - os: ubuntu-latest
-          rev: v0.10.2
-        - os: ubuntu-latest
-          rev: nightly
-        - os: macos-latest
-          rev: v0.10.1
-        - os: windows-latest
-          rev: v0.10.1
+          - os: ubuntu-22.04
+            rev: nightly/nvim-linux64.tar.gz
+          - os: ubuntu-22.04
+            rev: v0.7.2/nvim-linux64.tar.gz
+          - os: ubuntu-22.04
+            rev: v0.8.3/nvim-linux64.tar.gz
+          - os: ubuntu-22.04
+            rev: v0.9.5/nvim-linux64.tar.gz
+          - os: ubuntu-22.04
+            rev: v0.10.0/nvim-linux64.tar.gz
     steps:
       - uses: actions/checkout@v3
       - run: date +%F > todays-date
