--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,10 @@ jobs:
             rev: v0.9.5/nvim-linux64.tar.gz
           - os: ubuntu-22.04
             rev: v0.10.0/nvim-linux64.tar.gz
+          - os: macos-14
+            rev: nightly/nvim-macos-x86_64.tar.gz
+          - os: macos-14
+            rev: stable/nvim-macos-x86_64.tar.gz
     steps:
       - uses: actions/checkout@v3
       - run: date +%F > todays-date
