--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,41 +9,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest]
+        neovim_version: ['v0.8.3', 'v0.9.5', 'v0.10.2', 'nightly']
         include:
-          - os: ubuntu-22.04
-            rev: nightly/nvim-linux64.tar.gz
-          - os: ubuntu-22.04
-            rev: v0.7.2/nvim-linux64.tar.gz
-          - os: ubuntu-22.04
-            rev: v0.8.3/nvim-linux64.tar.gz
-          - os: ubuntu-22.04
-            rev: v0.9.5/nvim-linux64.tar.gz
-          - os: ubuntu-22.04
-            rev: v0.10.0/nvim-linux64.tar.gz
-          - os: macos-14
-            rev: nightly/nvim-macos-x86_64.tar.gz
-          - os: macos-14
-            rev: stable/nvim-macos-x86_64.tar.gz
+        - os: macos-latest
+          neovim_version: v0.10.1
+        - os: windows-latest
+          neovim_version: v0.10.1
     steps:
-      - uses: actions/checkout@v3
-      - run: date +%F > todays-date
-      - name: Restore cache for today's nightly.
-        uses: actions/cache@v3
+      - uses: actions/checkout@v4
+      - name: Setup neovim
+        uses: rhysd/action-setup-vim@v1
         with:
-          path: _neovim
-          key: ${{ runner.os }}-${{ matrix.rev }}-${{ hashFiles('todays-date') }}
-      - name: Prepare
-        run: |
-          test -d _neovim || {
-            mkdir -p _neovim
-            curl -sL "https://github.com/neovim/neovim/releases/download/${{ matrix.rev }}" | tar xzf - --strip-components=1 -C "${PWD}/_neovim"
-          }
-          mkdir -p ~/.local/share/nvim/site/pack/vendor/start
-          git clone --depth 1 https://github.com/nvim-lua/plenary.nvim ~/.local/share/nvim/site/pack/vendor/start/plenary.nvim
-          ln -s $(pwd) ~/.local/share/nvim/site/pack/vendor/start
+          neovim: true
+          version: ${{ matrix.neovim_version }}
       - name: Run tests
-        run: |
-          export PATH="${PWD}/_neovim/bin:${PATH}"
-          export VIM="${PWD}/_neovim/share/nvim/runtime"
-          nvim --version
-          make test
+        run: make test
