ci(test): Add timeout

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,5 @@ jobs:
           neovim: true
           version: ${{ matrix.neovim_version }}
       - name: Run tests
+        timeout-minutes: 3
         run: make test
